# business-info-fetcher

./: .gitignore  dump.rdb  main.py  pyproject.toml
src/application/: app_init.py  queues.py  routes.py  worker_init.py
src/business_info_fetcher/: __init__.py  errors.py  scripts.py  workers.py
src/business_info_fetcher/krajowy_rejestr_sadowy/: __init__.py  krs_api.py  krs_dokumenty_finansowe.py  links.py  scripts.py
src/business_info_fetcher/log/: __init__.py
src/log/: __init__.py
src/log/LOGS/: MAIN_LOG  QUEUE_INIT_LOG  ROUTES_LOG  SERVER_LOG  WORKER_LOG
tests/business_info_fetcher/krajowy_rejestr_sadowy/: test_krs_api.py  test_krs_dokumenty_finansowe.py
