[project]
name = "business-info-fetcher"
version = "0.1.0"
description = "fetching business data, such as company names and financial statements from official govenment sites"
authors = [
    {name = "Pomeran",email = "lejk99@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "rq (>=2.1.0,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "selenium (>=4.30.0,<5.0.0)",
]

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"


[tool.poetry.scripts]
worker-init = "src.application.worker_init:main"
app-init = "src.application.app_init:main"